--- a/index.html
+++ b/index.html
@@ -7,7 +7,56 @@
     <link rel="stylesheet" href="./styles.css/reset.css" />
     <link rel="stylesheet" href="./styles.css/style.css" />
     <link rel="stylesheet" href="./icons/style.css" />
-    <title>Document</title>
+    <title>Navigatiebalk</title>
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+      <nav>
+        <ul>
+          <li>
+            <a href="#">
+              <svg class="icon icon-home">
+                <use xlink:href="./icons/symbol-defs.svg#icon-home"></use>
+              </svg>
+            </a>
+          </li>
+          <li><a href="#">portfolio</a></li>
+          <li><a href="#">services</a></li>
+          <li><a href="#">blog</a></li>
+          <li><a href="#">about&nbsp;us</a></li>
+          <li><a href="#">contact</a></li>
+
+          <li>
+            <a href="#">
+              <svg class="icon icon-facebook">
+                <use xlink:href="./icons/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><svg class="icon icon-twitter">
+                <use xlink:href="./icons/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><svg class="icon icon-google">
+                <use xlink:href="./icons/symbol-defs.svg#icon-google"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="#"
+              ><svg class="icon icon-linkedin2">
+                <use xlink:href="./icons/symbol-defs.svg#icon-linkedin2"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </main>
+    <script defer src="./icons/svgxuse.js"></script>
+  </body>
 </html>
